--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tailwind-starter",
+  "name": "online-hacli-kaynaklari",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
